dev - Vue interim commit - not working.

--- a/src/bcrhp/package.json
+++ b/src/bcrhp/package.json
@@ -30,7 +30,9 @@
     "dependencies": {
         "arches": "github:bcgov/arches#v7.6.4.1_bcgov",
         "bcgov_arches_common": "github:bcgov/arches_common",
-        "typescript": "^5.6.2"
+        "primevue": "^4.2.5",
+        "typescript": "^5.6.2",
+        "vue-router": "^4.4.3"
     },
     "nodeModulesPaths": {}
 }
