Bcfms/release/1.1.0 rebase (#88)
* 1084 - Interim commit - docker configuration update

* 1084 - Interim commit - BCFMS migration

* 1084 - Add copy of arches core base search view for long URL update

* 1120 - Add migration to set missing feature IDs introduced in 7.6.0

* 1120 - Interim commit of 7.6 map-filter update

* 1120 - Reintroduce multiple geometries in new search framework

* 1125 - Add MVT tiler for updates

* 1125 - Update MVT tiler extension for 7.6 updates
1120 - Re-enable multi-geometry filter
1146 - Update to search results card CSS, move fonts directory

* 1084 - Update core to 7.6.3, remove redundant shpjsesm path
1120 - Fix GET/POST logic for large filters, update custom search config and class reference for 7.6

* 1146 - Fix details tabs - 7.6 API data structure changes

* 1082 - Add missing vite, tsconfig & pyproject files

* 1082 - Update core to 7.6.3

* 1081 - Initial commit of BCRHP 7.6.3 upgrade

* 1081 - Fix docker hostnames

* 1168 - Fix chronology index
1170 - Create baseline copy of view, materialized view and function SQL, and add process to handle 7.6.x upgrade.
dev - Add 1.3.0 readme

* 1081 - Add result of updateproject

* 1082 - Add missing files produced by updateproject

* 1125 - Fixed cluster query

* 1082 - Add readme

* 1081 - Initial commit of BCRHP 7.6.3 upgrade

* 1081 - Fix docker hostnames

* 1168 - Fix chronology index
1170 - Create baseline copy of view, materialized view and function SQL, and add process to handle 7.6.x upgrade.
dev - Add 1.3.0 readme

* 1081 - Add result of updateproject

* 1125 - Fixed cluster query

* 1170 - Move migration SQL scripts to seperate files, add util file, refactor map data migration to use new framework

* 1082 - Fixed migration dependencies for core models migrations, updated readme

* 1082 - Added missing files to src, added workaround to failing ts check

* 1082 - Revert invalid resource view commit.

* 1082 - Add missi

--- a/src/bcfms/package.json
+++ b/src/bcfms/package.json
@@ -1,6 +1,7 @@
 {
     "name": "bcfms",
     "license": "AGPL-3.0-only",
+    "version": "1.1.0-b.0",
     "scripts": {
         "build_development": "npm i typescript@5.6.2 && npm run eslint:check && npm run ts:check && cross-env NODE_OPTIONS=--max-old-space-size=2048 webpack --config ./webpack/webpack.config.dev.js",
         "build_production": "npm run eslint:check && npm run ts:check && cross-env NODE_OPTIONS=--max-old-space-size=2048 NODE_ENV=production webpack --config ./webpack/webpack.config.prod.js",
@@ -24,10 +25,11 @@
         "underscore": "^1.13.6"
     },
     "devDependencies": {
-        "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.6.1"
+        "arches-dev-dependencies": "archesproject/arches-dev-dependencies#stable/7.6.4"
     },
     "dependencies": {
-        "arches": "archesproject/arches#stable/7.6.3"
+        "arches": "github:bcgov/arches#v7.6.4.1_bcgov",
+        "bcgov_arches_common": "github:bcgov/arches_common"
     },
     "nodeModulesPaths": {}
 }
