1232 - Rework IPA, create project type LOV, bump version number dev - Add common concept and collection functions to arches_common, bump version number

--- a/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -436,7 +436,7 @@
                             }
                         ],
                         "placeholder": {
-                            "en": "Select an option"
+                            "en": "Select required project submissions"
                         },
                         "url": "/bc-fossil-management/concepts/dropdown?conceptid=6e1cdc31-0f16-4bd0-8fcc-b3246a808295"
                     },
@@ -1936,7 +1936,7 @@
                         "label": "Other Requirement Details",
                         "maxLength": null,
                         "placeholder": {
-                            "en": "Enter Other Requirement Details"
+                            "en": "Enter the details of the additional project requirement(s)"
                         },
                         "uneditable": false,
                         "width": "100%%"
