1232 - Bump version number dev - Add missing function, make variable name more accurate dev - Add readme

--- a/src/bcfms/pyproject.toml
+++ b/src/bcfms/pyproject.toml
@@ -25,9 +25,9 @@ classifiers = [
 requires-python = ">=3.10"
 dependencies = [
     "arches==7.6.4",
-    "bcgov_arches_common>=1.0.0",
+    "bcgov_arches_common>=1.1.0-b0",
 ]
-version = "1.1.0"
+version = "1.2.0-b0"
 
 [project.optional-dependencies]
 dev = [
