1232 - Remove reference to non-existent publication id

--- a/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -3361,7 +3361,7 @@
                     "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E4_Period",
                     "parentproperty": "http://www.cidoc-crm.org/cidoc-crm/P17_was_motivated_by",
                     "sortorder": 1,
-                    "sourcebranchpublication_id": "5f042272-dc67-11ef-a53d-0242ac170009"
+                    "sourcebranchpublication_id": null
                 },
                 {
                     "alias": "assessment_completion_date",
@@ -3384,7 +3384,7 @@
                     "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E64_End_of_Existence",
                     "parentproperty": "http://www.cidoc-crm.org/cidoc-crm/P115_finishes",
                     "sortorder": 0,
-                    "sourcebranchpublication_id": "5f042272-dc67-11ef-a53d-0242ac170009"
+                    "sourcebranchpublication_id": null
                 },
                 {
                     "alias": "project_requirements",
