--- a/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -1162,7 +1162,48 @@
                             "placeholder"
                         ],
                         "label": "FRPR",
-                        "options": [],
+                        "options": [
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "bafdfae0-cd10-4ca2-9b48-2f09dbe9ad6a",
+                                "id": "58dce13d-a85d-40d9-8492-fe1294c498c7",
+                                "sortorder": "",
+                                "text": "High"
+                            },
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "f6d941d1-37d1-497c-9944-3edfc55d7aa4",
+                                "id": "e816e647-6611-405d-aeee-00d886f36658",
+                                "sortorder": "",
+                                "text": "Low"
+                            },
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "2b85ccb2-f8e3-4e43-b61d-ab5658805c05",
+                                "id": "c7b5a5c2-d4a5-4c75-9a05-b993d18a748b",
+                                "sortorder": "",
+                                "text": "Medium"
+                            },
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "0464facd-9edc-482e-98d5-ac0243439005",
+                                "id": "52e35be3-b591-409d-9ed6-303532f1d6fd",
+                                "sortorder": "",
+                                "text": "Unknown"
+                            },
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "9cb2571a-c30d-412c-9dd8-a1ddf29674ae",
+                                "id": "42dd5658-dfbf-4f9e-a3e9-a22fc0ad95d9",
+                                "sortorder": "",
+                                "text": "Very Low"
+                            }
+                        ],
                         "placeholder": {
                             "en": "Select an option"
                         },
@@ -1284,7 +1325,8 @@
                         ],
                         "placeholder": {
                             "en": "Select an option"
-                        }
+                        },
+                        "url": "/bc-fossil-management/concepts/dropdown?conceptid=cc566eca-690e-41ea-acdb-8b16baa2864c"
                     },
                     "id": "a2393858-dc5c-11ef-80ef-0242ac170009",
                     "label": {
@@ -4717,9 +4759,9 @@
             "ontology_id": "e6e8db47-2ccf-11e6-927e-b8f6b115d7dd",
             "publication": {
                 "graph_id": "a237a6dc-dc5c-11ef-80ef-0242ac170009",
-                "notes": "Add other requirement details node",
-                "publicationid": "33a492a8-e4d0-11ef-854a-0242ac170009",
-                "published_time": "2025-02-06T21:20:34.252"
+                "notes": null,
+                "publicationid": "fbb1e57e-ef44-11ef-89ba-0242ac170007",
+                "published_time": "2025-02-20T04:41:43.132"
             },
             "relatable_resource_model_ids": [],
             "resource_2_resource_constraints": [],
