1233 - IPA change Report File -> File

--- a/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -573,13 +573,13 @@
                     "config": {
                         "acceptedFiles": "",
                         "defaultValue": [],
-                        "label": "Report File",
+                        "label": "File",
                         "maxFilesize": "50",
                         "rerender": true
                     },
                     "id": "594fa760-dc5e-11ef-93b5-0242ac170009",
                     "label": {
-                        "en": "Report File"
+                        "en": "File"
                     },
                     "node_id": "594fa2ec-dc5e-11ef-93b5-0242ac170009",
                     "sortorder": 5,
@@ -3086,7 +3086,7 @@
                     "isrequired": false,
                     "issearchable": true,
                     "istopnode": false,
-                    "name": "Report File",
+                    "name": "File",
                     "nodegroup_id": "594f9a5e-dc5e-11ef-93b5-0242ac170009",
                     "nodeid": "594fa2ec-dc5e-11ef-93b5-0242ac170009",
                     "ontologyclass": "http://www.ics.forth.gr/isl/CRMdig/D1_Digital_Object",
